update doku